[package]
name = "offregisters-nodejs"
version = "0.0.5"
authors = ["Samuel Marks @SamuelMarks"]
edition = "2018"

[dependencies]
offregisters-lib = { git = "https://github.com/offscale/offregisters-lib", branch = "master" }
lazy_static = "1.3.0"
url = "1.7.2"
serde_json = "1.0.39"
serde = { version = "1.0.89", features = ["derive"] }
failure = "0.1.5"
semver = "0.9.0"
